Update FAQ style

--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/returns.css">
 </head>
-
 <body>
     <!-- BEGIN HEADER -->
     <header>
@@ -51,7 +50,7 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Help</span>
+                <span style="font-size: 1.2em;">Information</span>
                 <hr>
                 <ul>
                     <li>
@@ -78,7 +77,7 @@
                 <h2>Returns</h2>
                 <p>You have 30 days to return an unopen and unused item from the date you received it. It must be in the
                     original packaging with the receipt.</p>
-                <p>You are responsible fo the cost of shipping. All shipping costs are non refundable.</p>
+                <p>You are responsible for the cost of shipping. All shipping costs are non refundable.</p>
                 <h3>Refunds</h3>
                 <p>We will notify you upon receiving the order. If approved, you will receive credit.</p>
             </div>
