--- a/storefront-site/html/shipping.html
+++ b/storefront-site/html/shipping.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/shipping.css">
 </head>
-
 <body>
     <!-- BEGIN HEADER -->
     <header>
@@ -51,7 +50,7 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Help</span>
+                <span style="font-size: 1.2em;">Information</span>
                 <hr>
                 <ul>
                     <li>
