--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../styles/locations.css">
     <link rel="stylesheet" href="../styles/footer.css">
 </head>
-
 <body>
     <!-- BEGIN HEADER -->
     <header>
@@ -50,7 +49,7 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Help</span>
+                <span style="font-size: 1.2em;">Information</span>
                 <hr>
                 <ul>
                     <li>
