Update styling on checkout and confirmation

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -54,27 +54,27 @@
                     <div class="progress-cart">
                         <div class="progress-step">
                             <div>
-                                <span class="material-icons" style="color: #007600">check_circle</span>
+                                <span class="material-icons" style="color: black">check_box_outline_blank</span>
                             </div>
                             <div>
-                                <b>Cart</b>
+                                <b>Review Cart</b>
                             </div>
                         </div>
                     </div>
                     <div class="progress-payment">
                         <div class="progress-step">
                             <div>
-                                <span class="material-icons" style="color: #C0C0C0">check_circle</span>
+                                <span class="material-icons" style="color: #C0C0C0">check_box_outline_blank</span>
                             </div>
                             <div>
-                                <b>Payment</b>
+                                <b>Check Out</b>
                             </div>
                         </div>
                     </div>
                     <div class="progress-confirmation">
                         <div class="progress-step">
                             <div>
-                                <span class="material-icons" style="color: #C0C0C0">check_circle</span>
+                                <span class="material-icons" style="color: #C0C0C0">check_box_outline_blank</span>
                             </div>
                             <div>
                                 <b>Confirmation</b>
