--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -50,54 +50,56 @@
     </header>
     <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- END HEADER -->
-
-    <div class = "confirmation-main-container">
-        <div class = "confirmation-small-container">
-            <div class="progress">
-                <div class="progress-cart">
-                    <div class="progress-step">
-                        <div>
-                            <span class="material-icons" style="color: #C0C0C0">check_circle</span>
-                        </div>
-                        <div>
-                            <b>Cart</b>
-                        </div>
-                    </div>
-                </div>
-                <div class="progress-payment">
-                    <div class="progress-step">
-                        <div>
-                            <span class="material-icons" style="color: #C0C0C0">check_circle</span>
-                        </div>
-                        <div>
-                            <b>Payment</b>
+    <div class="confirmation-main-container">
+        <div class="progress-container">
+            <div class="progress-inner-container">
+                <div class="progress">
+                    <div class="progress-cart">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #007600">check_box</span>
+                            </div>
+                            <div>
+                                <b>Review Cart</b>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="progress-confirmation">
-                    <div class="progress-step">
-                        <div>
-                            <span class="material-icons" style="color: #007600">check_circle</span>
+                    <div class="progress-payment">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #007600">check_box</span>
+                            </div>
+                            <div>
+                                <b>Check Out</b>
+                            </div>
                         </div>
-                        <div>
-                            <b>Confirmation</b>
+                    </div>
+                    <div class="progress-confirmation">
+                        <div class="progress-step">
+                            <div>
+                                <span class="material-icons" style="color: #007600">check_box</span>
+                            </div>
+                            <div>
+                                <b>Confirmation</b>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
         <div class="confirmation-confirm-container">
             <h1><b>Thank you for your purchase!</b></h1>
             <br>
-            <h4><b>Estimated delivery: In 2 weeks!</b></h4>
+            <b>Estimated delivery: 2 weeks</b>
+            <br>
+            You will recieve an email with your tracking number soon.
+            <br>
+            <br>
             <br>
             <a href="../index.html">Back to Homepage</a>
             <br><br><br>
         </div>
     </div>
-    
-
     <div class="outer-grid-product-listings">
         <h2>Recommended Products For You</h2>
         <div class="inner-grid-product-listings">
@@ -128,9 +130,8 @@
             </a>
         </div>
     </div>
-
-     <!-- Footer, hyperlink is set up, need a return page -->
-     <footer>
+    <!-- Footer, hyperlink is set up, need a return page -->
+    <footer>
         <div class="footer-nav-container">
             <nav class="footer-nav">
                 <b class="footer-nav-header">Information</b>
