Fix recommended products not being centered

--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -102,7 +102,7 @@
     </div>
     <div class="outer-grid-product-listings">
         <h2>Recommended Products For You</h2>
-        <div class="inner-grid-product-listings">
+        <div class="other-products">
             <a href="./products/product4.html">
                 <div class="product-listing">
                     <img src="../images/product4.png" alt="Product Image">
