Make progress bar consistent

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -64,7 +64,7 @@
                     <div class="progress-payment">
                         <div class="progress-step">
                             <div>
-                                <span class="material-icons" style="color: black">check_box_outline_blank</span>
+                                <span class="material-icons" style="color: #007600">check_box</span>
                             </div>
                             <div>
                                 <b>Check Out</b>
