--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -54,7 +54,7 @@
                     <div class="progress-cart">
                         <div class="progress-step">
                             <div>
-                                <span class="material-icons" style="color: black">check_box_outline_blank</span>
+                                <span class="material-icons" style="color: #007600">check_box</span>
                             </div>
                             <div>
                                 <b>Review Cart</b>
