Revert "fixed blank"
This reverts commit 479472ac4504e712430f26e73a86e23a36e012fb.

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -123,9 +123,8 @@
                     <option value="2029">
                     <option value="2030">
                 </datalist>
-                <div style="margin: 30px 8px 20px 6px;border-top:1px dotted #C0C0C0;"></div> 
                 <h2>Shipping Address</h2>
-                <label for="fullName"><b>FULL NAME</b></label><br>
+                <label for="fullName"><b>Full Name</b></label><br>
                 <input type="text" id="fullName" name="fullName" placeholder="John Doe"><br>
                 <label for="streetAddress"><b>STREET ADDRESS</b></label><br>
                 <input type="text" id="streetAddress" name="streetAddress" value="">
@@ -142,14 +141,13 @@
                 </div>
             </div>
         </form>
-        <div class="checkout-subtotal-container">
+        <div class="subtotal-container">
             <div class="subtotal">
                 <span>Subtotal (2 items): <b>$25.98</b></span><br>
                 <span>Delivery Fee: </span>
                 <span style="color: #007600;"><span class="material-icons" style="font-size: 1em;">check_circle</span> Free</span>
                 <br>
-                <span>Tax: <b>$2.08</b></span><br>
-                <div style="margin: 30px 8px 20px 6px;border-top:1px dotted #C0C0C0;"></div> 
+                <span>Tax: <b>$2.08</b></span><br><br>
                 <span style="font-size: 1.2em;">Total: <b>$28.06</b></span>
                 <a href="./confirmation.html">
                     <button type="submit" class="submit-button">Purchase</button>
