Change to all caps on Full Name header

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -124,7 +124,7 @@
                     <option value="2030">
                 </datalist>
                 <h2>Shipping Address</h2>
-                <label for="fullName"><b>Full Name</b></label><br>
+                <label for="fullName"><b>FULL NAME</b></label><br>
                 <input type="text" id="fullName" name="fullName" placeholder="John Doe"><br>
                 <label for="streetAddress"><b>STREET ADDRESS</b></label><br>
                 <input type="text" id="streetAddress" name="streetAddress" value="">
