--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -123,6 +123,7 @@
                     <option value="2029">
                     <option value="2030">
                 </datalist>
+                <div style="margin: 30px 8px 20px 6px;border-top:1px dotted #C0C0C0;"></div>
                 <h2>Shipping Address</h2>
                 <label for="fullName"><b>FULL NAME</b></label><br>
                 <input type="text" id="fullName" name="fullName" placeholder="John Doe"><br>
@@ -147,7 +148,8 @@
                 <span>Delivery Fee: </span>
                 <span style="color: #007600;"><span class="material-icons" style="font-size: 1em;">check_circle</span> Free</span>
                 <br>
-                <span>Tax: <b>$2.08</b></span><br><br>
+                <span>Tax: <b>$2.08</b></span><br>
+                <div style="margin: 30px 8px 20px 6px;border-top:1px dotted #C0C0C0;"></div>
                 <span style="font-size: 1.2em;">Total: <b>$28.06</b></span>
                 <a href="./confirmation.html">
                     <button type="submit" class="submit-button">Purchase</button>
