Update formatting of progress bar

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -67,7 +67,7 @@
                                 <span class="material-icons" style="color: #C0C0C0">check_box_outline_blank</span>
                             </div>
                             <div>
-                                <b>Check Out</b>
+                                <b>Checkout</b>
                             </div>
                         </div>
                     </div>
