--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -67,7 +67,7 @@
                                 <span class="material-icons" style="color: #007600">check_box</span>
                             </div>
                             <div>
-                                <b>Check Out</b>
+                                <b>Checkout</b>
                             </div>
                         </div>
                     </div>
