--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -70,7 +70,7 @@
                                 <span class="material-icons" style="color: #007600">check_box</span>
                             </div>
                             <div>
-                                <b>Check Out</b>
+                                <b>Checkout</b>
                             </div>
                         </div>
                     </div>
