Update checkout page formatting

--- a/storefront-site/html/checkout.html
+++ b/storefront-site/html/checkout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Out</title>
+    <title>Checkout</title>
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/google-material-icons.css">
     <link rel="stylesheet" href="../styles/header.css">
@@ -138,7 +138,7 @@
             <h4>Billing Address</h4>
                 <div class="div-left">
                     <label for="sameAddress">Same as Shipping Address</label>
-                    <input type="checkbox" id="sameAddress" name="sameAddress" value="sameAddress">
+                    <input type="checkbox" id="sameAddress" name="sameAddress" value="sameAddress" checked>
                 </div>
             </div>
         </form>
