--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -108,15 +108,14 @@
                         <br>
                         <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
                         <br>
-                        <input list="quantity" name="quantity" value="Qty: 1" class="quantity">
-                        <datalist id="quantity">
-                            <option value="Qty: 0 (Delete)">
-                            <option value="Qty: 1">
-                            <option value="Qty: 2">
-                            <option value="Qty: 3">
-                            <option value="Qty: 4">
-                            <option value="Qty: 5">
-                        </datalist>
+                        <select name="quantity" class="quantity">
+                            <option value="0">Remove</option>
+                            <option value="1" selected>Qty: 1</option>
+                            <option value="2">Qty: 2</option>
+                            <option value="3">Qty: 3</option>
+                            <option value="4">Qty: 4</option>
+                            <option value="5">Qty: 5</option>
+                        </select>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compare with similar items</a>
@@ -144,15 +143,14 @@
                         <br>
                         <input type="checkbox"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
                         <br>
-                        <input list="quantity" name="quantity" value="Qty: 1" class="quantity">
-                        <datalist id="quantity">
-                            <option value="Qty: 0 (Delete)">
-                            <option value="Qty: 1">
-                            <option value="Qty: 2">
-                            <option value="Qty: 3">
-                            <option value="Qty: 4">
-                            <option value="Qty: 5">
-                        </datalist>
+                        <select name="quantity" class="quantity">
+                            <option value="0">Remove</option>
+                            <option value="1" selected>Qty: 1</option>
+                            <option value="2">Qty: 2</option>
+                            <option value="3">Qty: 3</option>
+                            <option value="4">Qty: 4</option>
+                            <option value="5">Qty: 5</option>
+                        </select>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
                         <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compare with similar items</a>
